Bug 39581 - [bisected] Assertion failure in _get_image_surface
Summary: [bisected] Assertion failure in _get_image_surface
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xlib backend (show other bugs)
Version: 1.10.3
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-27 00:30 UTC by ojab
Modified: 2011-07-27 11:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb bt (6.64 KB, text/plain)
2011-07-27 00:31 UTC, ojab
Details
gdb bt full (35.34 KB, text/plain)
2011-07-27 00:32 UTC, ojab
Details
Possible culpit (961 bytes, patch)
2011-07-27 09:32 UTC, Uli Schlachter
Details | Splinter Review

Description ojab 2011-07-27 00:30:40 UTC
While opening Communigate Pro web-interface, I have:
firefox: cairo-xlib-surface.c:832: _get_image_surface: Assertion `extents->y + extents->height <= surface->height' failed.

bisected to

a69335a84eb9225b477cc8c753470eb3805b852c is the first bad commit
commit a69335a84eb9225b477cc8c753470eb3805b852c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jul 22 00:36:03 2011 +0100

    API: map-to-image and create-similar-image
    
    A common requirement is the fast upload of pixel data. In order to
    allocate the most appropriate image buffer, we need knowledge of the
    destination. The most obvious example is that we could use a
    shared-memory region for the image to avoid the transfer cost of
    uploading the pixels to the X server. Similarly, gl, win32, quartz...
    
    The other side of the equation is that for manual modification of a
    remote surface, it would be more efficient if we can create a similar
    image to reduce the transfer costs. This strategy is already followed
    for the destination fallbacks and this merely exposes the same
    capability for the application fallbacks.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

:040000 040000 de70606dccbd792e7dd4494fc1a0dd733bdd0f32 fb65e1f9201f914137d8c41999e4b0881b984ddf M	src
:040000 040000 e3bb5f9ad7ca033c0b38178695248b85113bff5b 07f5fd76bf3b851577be1dd01992009587c3b080 M	test
:040000 040000 f2e5de12ef56f51dc735ab656194815cd44f1bf1 589d880b314f7957ce7dea77a150c9050895ba89 M	util
Comment 1 ojab 2011-07-27 00:31:21 UTC
Created attachment 49599 [details]
gdb bt
Comment 2 ojab 2011-07-27 00:32:12 UTC
Created attachment 49600 [details]
gdb bt full

Please let me know if you need any additional info.
Comment 3 Uli Schlachter 2011-07-27 09:32:51 UTC
Created attachment 49620 [details] [review]
Possible culpit

Could you test if this patch fixes your problem?
Comment 4 ojab 2011-07-27 09:38:23 UTC
Patch works, no assertion failures with it.
Comment 5 Uli Schlachter 2011-07-27 11:04:01 UTC
Thanks for testing, fixed in commit 73e8384ac8


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.