xlib: Fix a typo

This was introduced in a69335a84eb9225b477cc8c75.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=39581

Signed-off-by: Uli Schlachter <psychon@znc.in>